添加 同步发布功能